@@ -1,114 +1,0 @@
-#FIG 3.2  Produced by xfig version 3.2.5c
-Portrait
-Center
-Metric
-A4      
-100.00
-Single
--2
-# ---BEGIN-TEXT---
-#     window size = 3             window size = 5
-# 
-#      |   |   |   |           |   |   |   |   |   |
-#     -+---+---+---+-         -+---+---+---+---+---+-
-#      | N | N | N |           | N | N | N | N | N |
-#     -+---+---+---+-         -+---+---+---+---+---+-
-#      | N | C | N |           | N | N | N | N | N |
-#     -+---+---+---+-         -+---+---+---+---+---+-
-#      | N | N | N |           | N | N | C | N | N |
-#     -+---+---+---+-         -+---+---+---+---+---+-
-#      |   |   |   |           | N | N | N | N | N |
-#                             -+---+---+---+---+---+-
-#                              | N | N | N | N | N |
-#                             -+---+---+---+---+---+-
-#                              |   |   |   |   |   |
-# ---END-TEXT---
-1200 2
-6 1627 1909 1844 2885
-4 1 0 50 0 4 14 0.0000 2 180 180 1736 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 1736 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 1736 2473 N\001
--6
-6 2387 1909 2604 2885
-4 1 0 50 0 4 14 0.0000 2 180 180 2517 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 2517 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 2517 2473 N\001
--6
-6 4514 1475 4840 3319
-4 1 0 50 0 4 14 0.0000 2 180 180 4666 1692 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 4666 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 4666 2473 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 4666 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 4666 3254 N\001
--6
-6 4948 1475 5165 3319
-4 1 0 50 0 4 14 0.0000 2 180 180 5057 1692 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5057 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5057 2473 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5057 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5057 3254 N\001
--6
-6 5708 1475 5925 3319
-4 1 0 50 0 4 14 0.0000 2 180 180 5838 1692 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5838 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5838 2473 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5838 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5838 3254 N\001
--6
-6 6142 1475 6359 3319
-4 1 0 50 0 4 14 0.0000 2 180 180 6228 1692 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 6228 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 6228 2473 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 6228 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 6228 3254 N\001
--6
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 1280 2213 2973 2213
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 1280 2603 2973 2603
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 1280 2994 2973 2994
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 1280 1822 2973 1822
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 2322 1562 2322 3254
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 2712 1562 2712 3254
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 1931 1562 1931 3254
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 1540 1562 1540 3254
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4210 2213 6684 2213
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4210 2603 6684 2603
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4210 2994 6684 2994
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4210 1822 6684 1822
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 5252 1171 5252 3645
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 5642 1171 5642 3645
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 6033 1171 6033 3645
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 6424 1171 6424 3645
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4210 1431 6684 1431
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4210 3385 6684 3385
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4861 1171 4861 3645
-2 1 0 1 0 7 50 0 -1 0.000 0 0 -1 0 0 2
-	 4471 1171 4471 3645
-4 1 0 50 0 4 14 0.0000 2 180 180 2126 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 2126 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 2126 2473 C\001
-4 1 0 50 0 4 14 0.0000 2 180 1575 5382 780 window size: 5\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5447 1692 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5447 2082 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5447 2473 C\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5447 2864 N\001
-4 1 0 50 0 4 14 0.0000 2 180 180 5447 3254 N\001
-4 1 0 50 0 4 14 0.0000 2 180 1575 2191 780 window size: 3\001
